gl: add a base memory object
It handles the following
- GstAllocationParams -> gst_memory_init transformation
- Makes sure that map/unmap/create/destroy happen on the GL thread with
  a GL context current.
- Holds a possible sysmem accessible data pointer with alignment.
- Holds the need upload/download transfer state

--- a/gst-libs/gst/gl/Makefile.am
+++ b/gst-libs/gst/gl/Makefile.am
@@ -13,6 +13,7 @@ libgstgl_@GST_API_VERSION@_la_SOURCES = \
 	gstglcontext.c \
 	gstgldebug.c \
 	gstglbasebuffer.c \
+	gstglbasememory.c \
 	gstglmemory.c \
 	gstglbufferpool.c \
 	gstglfilter.c \
@@ -41,6 +42,7 @@ libgstgl_@GST_API_VERSION@include_HEADERS = \
 	gstglcontext.h \
 	gstgldebug.h \
 	gstglbasebuffer.h \
+	gstglbasememory.h \
 	gstglmemory.h \
 	gstglbufferpool.h \
 	gstglfilter.h \
