vpx: created common base class GstVPXdec for vpx decoders
Base class for the vp8dec and vp9dec.

https://bugzilla.gnome.org/show_bug.cgi?id=755510

--- a/ext/vpx/Makefile.am
+++ b/ext/vpx/Makefile.am
@@ -2,6 +2,7 @@ plugin_LTLIBRARIES = \
 	libgstvpx.la
 
 libgstvpx_la_SOURCES = \
+        gstvpxdec.c \
 	gstvp8dec.c \
 	gstvp8enc.c \
 	gstvp8utils.c \
