qtsink: Add configured GL cflags to the build
We don't directly link to GL in the element, though we use GL headers.
For this reason we need to include the proper GL headers path. This
prevent this element from using a different GL header then libgstgl.

--- a/ext/qt/Makefile.am
+++ b/ext/qt/Makefile.am
@@ -29,7 +29,8 @@ libgstqtsink_la_CXXFLAGS = \
 	$(GST_CXXFLAGS) \
 	$(GST_BASE_CFLAGS) \
 	$(GST_PLUGINS_BASE_CFLAGS) \
-	$(QT_CFLAGS)
+	$(QT_CFLAGS) \
+	$(GL_CFLAGS)
 
 libgstqtsink_la_LIBADD = \
 	$(GST_BASE_LIBS) \
