applemedia: Link to IOKit.framework for IOSurface related functions

--- a/sys/applemedia/Makefile.am
+++ b/sys/applemedia/Makefile.am
@@ -84,7 +84,8 @@ libgstapplemedia_la_SOURCES +=			\
 
 libgstapplemedia_la_LDFLAGS +=			\
 	-Wl,-framework -Wl,Cocoa		\
-	-Wl,-framework -Wl,QTKit
+	-Wl,-framework -Wl,QTKit		\
+	-Wl,-framework -Wl,IOKit
 
 endif
 
