applemedia: Link to IOSurface.framework for the IOSurface API

--- a/sys/applemedia/Makefile.am
+++ b/sys/applemedia/Makefile.am
@@ -85,7 +85,7 @@ libgstapplemedia_la_SOURCES +=			\
 libgstapplemedia_la_LDFLAGS +=			\
 	-Wl,-framework -Wl,Cocoa		\
 	-Wl,-framework -Wl,QTKit		\
-	-Wl,-framework -Wl,IOKit
+	-Wl,-framework -Wl,IOSurface
 
 endif
 
