codecparsers: vp9: move license blurb into header and remove aux files
This is just a bunch of lookup tables..

--- a/gst-libs/gst/codecparsers/Makefile.am
+++ b/gst-libs/gst/codecparsers/Makefile.am
@@ -38,5 +38,4 @@ libgstcodecparsers_@GST_API_VERSION@_la_LDFLAGS = \
 	$(GST_ALL_LDFLAGS) \
 	$(GST_LT_LDFLAGS)
 
-EXTRA_DIST = dboolhuff.LICENSE dboolhuff.PATENTS dboolhuff.AUTHORS \
-             vp9utils.LICENSE vp9utils.PATENTS vp9utils.AUTHORS
+EXTRA_DIST = dboolhuff.LICENSE dboolhuff.PATENTS dboolhuff.AUTHORS
