sdp: The SDP library depends on the RTP library now and is not independent anymore
Fix up the build dependencies.

--- a/gst-libs/gst/Makefile.am
+++ b/gst-libs/gst/Makefile.am
@@ -24,8 +24,10 @@ pbutils: video audio
 
 rtp: audio
 
+sdp: rtp
+
 INDEPENDENT_SUBDIRS = \
-	tag audio fft sdp video app
+	tag audio fft video app
 
 .PHONY: independent-subdirs $(INDEPENDENT_SUBDIRS)
 
