--- a/docs/gst/gstreamer.types.in
+++ b/docs/gst/gstreamer.types.in
@@ -28,6 +28,8 @@ gst_registry_get_type
 gst_system_clock_get_type
 gst_tag_setter_get_type
 gst_task_get_type
+gst_tracer_get_type
+gst_tracer_factory_get_type
 gst_type_find_factory_get_type
 gst_uri_handler_get_type
 
